Issue with markdown images

--- a/ae_incite.ipynb
+++ b/ae_incite.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
     "            im.set_array(data[i].reshape(-1))\n",
     "        \n",
     "        if save == True:\n",
-    "            fig.savefig('data/incite/{}.pdf'.format(plot_title), dpi=300)\n",
+    "            fig.savefig('data/incite/{}'.format(plot_title), dpi=300)\n",
     "    else:\n",
     "        def update(frame):\n",
     "            for i, im in enumerate(images):\n",
@@ -1557,12 +1557,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/utanashati/miniconda3/lib/python3.6/site-packages/matplotlib/pyplot.py:524: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "for i, key in enumerate(d_data.keys()):\n",
-    "    plot([sums[i]], ['Pattern {}: Input Sum'.format(str(key))], 'pattern_sums_input/pattern_sum_{}'.format(key))"
+    "    plot([sums[i]], ['Pattern {}: Input Sum'.format(str(key))], 'pattern_sums_input/pattern_sum_{}.png'.format(key))"
    ]
   },
   {
@@ -1576,12 +1585,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/utanashati/miniconda3/lib/python3.6/site-packages/matplotlib/pyplot.py:524: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  max_open_warning, RuntimeWarning)\n"
+     ]
+    }
+   ],
    "source": [
     "for i, key in enumerate(d_data.keys()):\n",
-    "    plot([sums_decoded[i]], ['Pattern {}: Decoded Sum'.format(str(key))], 'pattern_sums_decoded/pattern_sum_{}'.format(key))"
+    "    plot([sums_decoded[i]], ['Pattern {}: Decoded Sum'.format(str(key))], 'pattern_sums_decoded/pattern_sum_{}.png'.format(key))"
    ]
   },
   {
@@ -1619,7 +1637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1640,7 +1658,7 @@
     "            arr = np.vstack((np.arange(8)+1, distrib)).T\n",
     "            ax.scatter(arr[:, 0], arr[:, 1], alpha=0.7)\n",
     "        ax.set_title(\"Pattern {}: Decoded Distribution\".format(key))\n",
-    "        fig.savefig(\"data/incite/pattern_distribs/pattern_distrib_{}.pdf\".format(key), dpi=300)"
+    "        fig.savefig(\"data/incite/pattern_distribs/pattern_distrib_{}.png\".format(key), dpi=300)"
    ]
   },
   {
@@ -1656,9 +1674,9 @@
    "source": [
     "446691 | 757795 | 766947\n",
     "--- | --- | ---\n",
-    "<img src=\"data/incite/pattern_sums_decoded/pattern_sum_446691.pdf\" /> | <img src=\"data/incite/pattern_sums_decoded/pattern_sum_757795.pdf\" /> | <img src=\"data/incite/pattern_sums_decoded/pattern_sum_766947.pdf\" />\n",
-    "<img src=\"data/incite/pattern_sums_input/pattern_sum_446691.pdf\" /> | <img src=\"data/incite/pattern_sums_input/pattern_sum_757795.pdf\" /> | <img src=\"data/incite/pattern_sums_input/pattern_sum_766947.pdf\" />\n",
-    "<img src=\"data/incite/pattern_distribs/pattern_distrib_446691.pdf\" /> | <img src=\"data/incite/pattern_distribs/pattern_distrib_757795.pdf\" /> | <img src=\"data/incite/pattern_distribs/pattern_distrib_766947.pdf\" />"
+    "<img src=\"data/incite/pattern_sums_decoded/pattern_sum_446691.png\" /> | <img src=\"data/incite/pattern_sums_decoded/pattern_sum_757795.png\" /> | <img src=\"data/incite/pattern_sums_decoded/pattern_sum_766947.png\" />\n",
+    "<img src=\"data/incite/pattern_sums_input/pattern_sum_446691.png\" /> | <img src=\"data/incite/pattern_sums_input/pattern_sum_757795.png\" /> | <img src=\"data/incite/pattern_sums_input/pattern_sum_766947.png\" />\n",
+    "<img src=\"data/incite/pattern_distribs/pattern_distrib_446691.png\" /> | <img src=\"data/incite/pattern_distribs/pattern_distrib_757795.png\" /> | <img src=\"data/incite/pattern_distribs/pattern_distrib_766947.png\" />"
    ]
   },
   {
