Sparse AE + Meeting Log

--- a/ae_incite.ipynb
+++ b/ae_incite.ipynb
@@ -1535,7 +1535,7 @@
     "            plt.hist(x_test[test_num], log=True, bins=50, range=[0, 1], alpha=0.5, label='x_test')\n",
     "            plt.title(\"Histogram: Test Vector {}\".format(test_num))\n",
     "            plt.legend()\n",
-    "            plt.savefig('data/incite/comp_hist_{}.pdf'.format(test_num), dpi=300)\n",
+    "            plt.savefig('data/incite/models_log/sparse/comp_hist/comp_hist_{}.pdf'.format(test_num), dpi=300)\n",
     "            plt.clf()"
    ]
   },
@@ -1719,7 +1719,7 @@
    "outputs": [],
    "source": [
     "for i, key in enumerate(d_data.keys()):\n",
-    "    plot([sums[i]], ['Pattern {}: Input Sum'.format(str(key))], 'pattern_sums_input/pattern_sum_{}.pdf'.format(key))"
+    "    plot([sums[i]], ['Pattern {}: Input Sum'.format(str(key))], 'models_log/shuffle/pattern_sums_input/pattern_sum_{}.pdf'.format(key))"
    ]
   },
   {
@@ -1738,7 +1738,7 @@
    "outputs": [],
    "source": [
     "for i, key in enumerate(d_data.keys()):\n",
-    "    plot([sums_decoded[i]], ['Pattern {}: Decoded Sum'.format(str(key))], 'pattern_sums_decoded/pattern_sum_{}.pdf'.format(key))"
+    "    plot([sums_decoded[i]], ['Pattern {}: Decoded Sum'.format(str(key))], 'models_log/shuffle/pattern_sums_decoded/pattern_sum_{}.pdf'.format(key))"
    ]
   },
   {
@@ -1788,7 +1788,7 @@
     "            arr = np.vstack((np.arange(8)+1, distrib)).T\n",
     "            ax.scatter(arr[:, 0], arr[:, 1], alpha=0.7)\n",
     "        ax.set_title(\"Pattern {}: Decoded Distribution\".format(key))\n",
-    "        fig.savefig(\"data/incite/pattern_distribs/pattern_distrib_{}.png\".format(key), dpi=300)"
+    "        fig.savefig(\"data/incite/models_log/shuffle/pattern_distribs/pattern_distrib_{}.png\".format(key), dpi=300)"
    ]
   },
   {
@@ -1804,9 +1804,9 @@
    "source": [
     "446691 | 757795 | 766947\n",
     "--- | --- | ---\n",
-    "<img src=\"data/incite/pattern_sums_decoded/pattern_sum_446691.png\" /> | <img src=\"data/incite/pattern_sums_decoded/pattern_sum_757795.png\" /> | <img src=\"data/incite/pattern_sums_decoded/pattern_sum_766947.png\" />\n",
-    "<img src=\"data/incite/pattern_sums_input/pattern_sum_446691.png\" /> | <img src=\"data/incite/pattern_sums_input/pattern_sum_757795.png\" /> | <img src=\"data/incite/pattern_sums_input/pattern_sum_766947.png\" />\n",
-    "<img src=\"data/incite/pattern_distribs/pattern_distrib_446691.png\" /> | <img src=\"data/incite/pattern_distribs/pattern_distrib_757795.png\" /> | <img src=\"data/incite/pattern_distribs/pattern_distrib_766947.png\" />"
+    "<img src=\"data/incite/models_log/shuffle/pattern_sums_decoded/pattern_sum_446691.png\" /> | <img src=\"data/incite/models_log/shuffle/pattern_sums_decoded/pattern_sum_757795.png\" /> | <img src=\"data/incite/models_log/shuffle/pattern_sums_decoded/pattern_sum_766947.png\" />\n",
+    "<img src=\"data/incite/models_log/shuffle/pattern_sums_input/pattern_sum_446691.png\" /> | <img src=\"data/incite/models_log/shuffle/pattern_sums_input/pattern_sum_757795.png\" /> | <img src=\"data/incite/models_log/shuffle/pattern_sums_input/pattern_sum_766947.png\" />\n",
+    "<img src=\"data/incite/models_log/shuffle/pattern_distribs/pattern_distrib_446691.png\" /> | <img src=\"data/incite/models_log/shuffle/pattern_distribs/pattern_distrib_757795.png\" /> | <img src=\"data/incite/models_log/shuffle/pattern_distribs/pattern_distrib_766947.png\" />"
    ]
   },
   {
